rnsc/test_data/rns_integration/error/parser/inner_class_sub_directive/multiple_definitions.rns
; Tests that multiple .inner_class directives are detected and reported.
; Expected error: E-042 (multiple inner class refs)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .inner_class com/profs/Main$Inner
    .inner_class com/profs/Main$Other
.inner_classes_attr_end

.class_end
